// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountsCarousel should not render bubbles if number of accounts is more than the maximum 1`] = `<div />`;

exports[`AccountsCarousel should render a bubble for each account 1`] = `
<div>
  <ul
    class="bubbles"
  >
    <li
      class="item"
    >
      <a
        aria-label="My Sporran Account"
        class="bubble"
        href="/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
        title="My Sporran Account"
      />
    </li>
    <li
      class="item"
    >
      <a
        aria-label="My Second Account"
        class="bubble"
        href="/account/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
        title="My Second Account"
      />
    </li>
    <li
      class="item"
    >
      <a
        aria-label="My Third Account"
        class="bubble"
        href="/account/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
        title="My Third Account"
      />
    </li>
    <li
      class="item"
    >
      <a
        aria-label="Create new account"
        class="add"
        href="/account/NEW"
        title="Create new account"
      />
    </li>
  </ul>
</div>
`;

exports[`AccountsCarousel should render normal accounts 1`] = `
<div>
  <div
    class="container"
  >
    <section>
      <div
        class="MacLachlan tartan"
      >
        Identicon
      </div>
      <div
        class="name"
      >
        <span>
          My Second Account
        </span>
        <div
          class="wrapper"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Account options"
            class="toggle"
            role="button"
            tabindex="0"
            title="Account options"
            type="button"
          />
        </div>
      </div>
    </section>
    <a
      aria-label="My Sporran Account"
      class="left"
      href="/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
      title="My Sporran Account"
    />
    <a
      aria-label="My Third Account"
      class="right"
      href="/account/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
      title="My Third Account"
    />
    <ul
      class="bubbles"
    >
      <li
        class="item"
      >
        <a
          aria-label="My Sporran Account"
          class="bubble"
          href="/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
          title="My Sporran Account"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="My Second Account"
          class="bubble"
          href="/account/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
          title="My Second Account"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="My Third Account"
          class="bubble"
          href="/account/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
          title="My Third Account"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Create new account"
          class="add"
          href="/account/NEW"
          title="Create new account"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`AccountsCarousel should render the first account 1`] = `
<div>
  <div
    class="container"
  >
    <section>
      <div
        class="MacFarlane tartan"
      >
        Identicon
      </div>
      <div
        class="name"
      >
        <span>
          My Sporran Account
        </span>
        <div
          class="wrapper"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Account options"
            class="toggle"
            role="button"
            tabindex="0"
            title="Account options"
            type="button"
          />
        </div>
      </div>
    </section>
    <a
      aria-label="Create new account"
      class="left"
      href="/account/NEW"
      title="Create new account"
    />
    <a
      aria-label="My Second Account"
      class="right"
      href="/account/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
      title="My Second Account"
    />
    <ul
      class="bubbles"
    >
      <li
        class="item"
      >
        <a
          aria-label="My Sporran Account"
          class="bubble"
          href="/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
          title="My Sporran Account"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="My Second Account"
          class="bubble"
          href="/account/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
          title="My Second Account"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="My Third Account"
          class="bubble"
          href="/account/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
          title="My Third Account"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Create new account"
          class="add"
          href="/account/NEW"
          title="Create new account"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`AccountsCarousel should render the last account 1`] = `
<div>
  <div
    class="container"
  >
    <section>
      <div
        class="MacPherson tartan"
      >
        Identicon
      </div>
      <div
        class="name"
      >
        <span>
          My Third Account
        </span>
        <div
          class="wrapper"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Account options"
            class="toggle"
            role="button"
            tabindex="0"
            title="Account options"
            type="button"
          />
        </div>
      </div>
    </section>
    <a
      aria-label="My Second Account"
      class="left"
      href="/account/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
      title="My Second Account"
    />
    <a
      aria-label="Create new account"
      class="right"
      href="/account/NEW"
      title="Create new account"
    />
    <ul
      class="bubbles"
    >
      <li
        class="item"
      >
        <a
          aria-label="My Sporran Account"
          class="bubble"
          href="/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
          title="My Sporran Account"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="My Second Account"
          class="bubble"
          href="/account/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
          title="My Second Account"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="My Third Account"
          class="bubble"
          href="/account/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
          title="My Third Account"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Create new account"
          class="add"
          href="/account/NEW"
          title="Create new account"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`AccountsCarousel should render the new account 1`] = `
<div>
  <div
    class="container"
  >
    <section>
      <div
        class="MacLeod tartan"
      >
        <a
          aria-label="Create new account"
          class="new"
          href="/account/create"
          title="Create new account"
        />
      </div>
      <p
        class="new"
      >
        Create new account
      </p>
    </section>
    <a
      aria-label="My Third Account"
      class="left"
      href="/account/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
      title="My Third Account"
    />
    <a
      aria-label="My Sporran Account"
      class="right"
      href="/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
      title="My Sporran Account"
    />
    <ul
      class="bubbles"
    >
      <li
        class="item"
      >
        <a
          aria-label="My Sporran Account"
          class="bubble"
          href="/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
          title="My Sporran Account"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="My Second Account"
          class="bubble"
          href="/account/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
          title="My Second Account"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="My Third Account"
          class="bubble"
          href="/account/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
          title="My Third Account"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Create new account"
          class="add"
          href="/account/NEW"
          title="Create new account"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`AccountsCarousel should support other paths 1`] = `
<div>
  <div
    class="container"
  >
    <section>
      <div
        class="MacPherson tartan"
      >
        Identicon
      </div>
      <div
        class="name"
      >
        <span>
          My Third Account
        </span>
        <div
          class="wrapper"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Account options"
            class="toggle"
            role="button"
            tabindex="0"
            title="Account options"
            type="button"
          />
        </div>
      </div>
    </section>
    <a
      aria-label="My Second Account"
      class="left"
      href="/account/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr/send"
      title="My Second Account"
    />
    <a
      aria-label="Create new account"
      class="right"
      href="/account/NEW/send"
      title="Create new account"
    />
    <ul
      class="bubbles"
    >
      <li
        class="item"
      >
        <a
          aria-label="My Sporran Account"
          class="bubble"
          href="/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire/send"
          title="My Sporran Account"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="My Second Account"
          class="bubble"
          href="/account/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr/send"
          title="My Second Account"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="My Third Account"
          class="bubble"
          href="/account/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL/send"
          title="My Third Account"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Create new account"
          class="add"
          href="/account/NEW/send"
          title="Create new account"
        />
      </li>
    </ul>
  </div>
</div>
`;
